------------------------------------------------------
-Bug fix
-Now you can choose font and color in KchartWizard
-Save others parameters

2000-01-08 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Now there is one color for same think
-Now you can choose a "sub type chart"
-Add new parameters depth3d width3d
-bugfix

2000-01-09 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Now ytitle2 works
-Add new parameters ylabel2_fmt

2000-01-13 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Add new type of bar chart : Percent bar chart
But Pb for writing % in label for the moment it's not good
-Bug fix

2000-01-14 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Add new page for config chart : Parameter page
-Bug fix

2000-01-15 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Add new page for config pie chart
-Pie chart works a lot but not for add in kchart for the moment
=> when you click on PIE3D or PIE2D =>you look at anythink
-bug fix.

2000-01-16 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Now in Bar chart percent % is writting in yaxis
-Improved configparameters
-bug fix
-Start to install label 

2000-01-21 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Now there are label and legend
-Add new page for config font
-Bug fix

2000-01-22 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Add new page for config pie chart
-Now you can choose pie chart
-Bug fix

2000-01-23 - Montel laurent <montell@club-internet.fr>
------------------------------------------------------
-Improved pie chart and page config pie chart