@@ -19,24 +19,32 @@
 KChartFontConfigPage::KChartFontConfigPage(KChartParameters* params,QWidget* parent ) :
     QWidget( parent ),_params( params )
 {
+
    QGridLayout *grid = new QGridLayout(this,5,4,15,7);
 
    list=new QListBox(this);
    list->resize( list->sizeHint() );
-   //grid->addWidget( list,0,0);
    grid->addMultiCellWidget(list,0,4,0,0);
    fontButton = new QPushButton( this);
    fontButton->setText(i18n("Font"));
- 
+
    fontButton->resize( fontButton->sizeHint() );
    grid->addWidget( fontButton,2,1);
+
+   listColor=new QListBox(this);
+   listColor->resize( listColor->sizeHint() );
+   grid->addMultiCellWidget(listColor,0,4,2,2);
+   colorButton = new KColorButton( this);
+
+   colorButton->resize( colorButton->sizeHint() );
+   grid->addWidget( colorButton,2,3);
    grid->addColSpacing(0,list->width());
-   grid->addColSpacing(2,list->width());
-   grid->addColSpacing(3,list->width());
-      
-   initList(); 
-   connect(fontButton,SIGNAL(clicked()),this,SLOT(changeLabelFont()));   
-  
+   grid->addColSpacing(2,listColor->width());
+   //grid->addColSpacing(3,list->width());
+
+   initList();
+   connect(fontButton,SIGNAL(clicked()),this,SLOT(changeLabelFont()));
+   connect(listColor,SIGNAL(highlighted(int )),this,SLOT(changeIndex(int)));
 }
 
 void KChartFontConfigPage::initList()
@@ -51,13 +59,52 @@ void KChartFontConfigPage::initList()
   	}
   list->insertItem(i18n("Label"));
   list->setCurrentItem(0);
+  int num=0;
+  bool noEnough=false;
+  //num <12 because there are 12 colors
+  for(QStringList::Iterator it = _params->legend.begin();it  != _params->legend.end();++it,num++)
+        {
+        if(num<12)
+                listColor->insertItem(*it);
+        else
+                {
+                if(!noEnough)
+                        {
+                        listColor->insertItem(i18n("Not enough color"));
+                        noEnough=true;
+                        }
+                }
+        }
+  listColor->setCurrentItem(0);
+  for(unsigned int i=0;i<_params->legend.count();i++)
+        {
+        if(i<12)
+                extColor.setColor(i,_params->ExtColor.color(i));
+        }
+  indice=0;
+  colorButton->setColor(extColor.color(indice));
+}
+
+void KChartFontConfigPage::changeIndex(int index)
+{
+cout <<"Change Index "<<index<<endl;
+if(index>11)
+        colorButton->setEnabled(false);
+else
+        {
+        if(!colorButton->isEnabled())
+                colorButton->setEnabled(true);
+        }
+extColor.setColor(indice,colorButton->color());
+colorButton->setColor(extColor.color(index));
+indice=index;
 }
 
 void KChartFontConfigPage::changeLabelFont()
 {
 if(list->currentText()==i18n("Title"))
 	{
-	if (KFontDialog::getFont( title,true,this ) == QDialog::Rejected )
+ 	if (KFontDialog::getFont( title,true,this ) == QDialog::Rejected )
 	      return;
 	}
 else if(list->currentText()==i18n("X-Title"))
@@ -103,6 +150,13 @@ void KChartFontConfigPage::init()
   xaxis=_params->xAxisFont();
   yaxis=_params->yAxisFont();
   label=_params->labelFont();
+
+  for(int i=0;i<12;i++)
+        {
+         extColor.setColor(i,_params->ExtColor.color(i));
+        }
+  indice=0;
+  colorButton->setColor(extColor.color(indice));
 }
 void KChartFontConfigPage::apply()
 {
@@ -115,4 +169,11 @@ void KChartFontConfigPage::apply()
   	_params->setYTitleFont(ytitle);
   	}
   _params->setTitleFont(title);
-  }
+
+  extColor.setColor(indice,colorButton->color());
+  for(unsigned int i=0;i<extColor.count();i++)
+        {
+         _params->ExtColor.setColor(i,extColor.color(i));
+        }
+
+}
